--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div>
-        <h1>Welcome to our website</h1>
+        <h1>Welcome to our Main Website</h1>
+        <p>Hello guys how are you?</p>
     </div>
 </body>
 </html>
