--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Lessons by Mustafa Ehsan</title>
+    <title>Git Lessons by Mustafa Ehsan Alokozay</title>
     <link href="main.css" rel="stylesheet" />
 </head>
 <body>
