Update greeting message in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1>Welcome to our Main Website</h1>
-        <p>Hello guys how are you?</p>
+        <p>Hello guys how are you? We are great</p>
     </div>
 </body>
 </html>
